--- a/CodingLanguages.Web/Views/_ViewImports.cshtml
+++ b/CodingLanguages.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using GeekShooping.Web
-@using GeekShooping.Web.Models
+﻿@using CodingLanguages.Web
+@using CodingLanguages.Web.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
